fix overflow issue and add favicon

--- a/src/styles/components/_auth.scss
+++ b/src/styles/components/_auth.scss
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100%;
   &__backspace {
     height: 3rem;
     width: 3rem;
